syntax = "proto3";

package pb;

import "token/token.proto";

option go_package = "github.com/Streamfair/streamfair_token_svc/pb/token";

message UpdateTokenRequest {
    int64 id = 1;
    optional int64 user_id = 2;
    optional string token_type = 3;
}

message UpdateTokenResponse {
    Token token = 1;
}